# yauzastore

./: .gitignore  pyproject.toml
yauzastore/: manage.py
yauzastore/accounts/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
yauzastore/accounts/templates/accounts/: account.html  change_password.html  edit.html  login.html  logout.html  register.html
yauzastore/orders/: admin.py  context_processors.py  forms.py  models.py  tests.py  urls.py  views.py
yauzastore/orders/templates/orders/: making_order.html  order.html  order_detail.html  order_history.html
yauzastore/shop/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
yauzastore/shop/static/shop/css/: shop.css
yauzastore/shop/templates/shop/: about.html  form_other.html  form_realization.html  form_rental.html  index.html  item_page.html  layout.html  partners_page.html  privacy_policy.html  products.html  promo.html  public_offer.html  refund_and_exchange_policy.html
yauzastore/shop/templatetags/: cart_filters.py
yauzastore/staticfiles/orders/css/: orders.css
yauzastore/staticfiles/shop/css/: shop.css
yauzastore/yauzastore/: asgi.py  settings.py  urls.py  wsgi.py
