[tool.poetry]
name = "django-project"
version = "0.1.0"
description = ""
authors = ["Loginov <itsmeegorloginov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
psycopg2-binary = "^2.9.9"
pillow = "^10.4.0"
django-ecommerce = "^1.0.10"
django-money = "^3.5.2"
pytest = "^8.3.3"
pytest-django = "^4.9.0"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
